# querysource

./: .bumpversion.cfg  .gitignore  CHANGES.rst  COLUMN_FILTER_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  INSTALL  INTEGRATION_VISUAL_GUIDE.md  JOIN_AND_COLUMN_FILTER_INTEGRATION.md  JOIN_CONDITIONS_FEATURE.md  JOIN_CONDITIONS_SUMMARY.md  MANIFEST.in  Makefile  app.py  conftest.py  pyproject.toml  pytest.ini  qs.py  setup.py  test_influx.py  test_parsers.py  test_slug.py
.agent/rules/: async-programming-expert.md  code-reviewer.md  python-development.md
.agent/workflows/: debug-regressions-with-git-bisect-binary-search.md  start-flow.md
.claude/agents/: code-reviewer.md  sdd-autopilot.md  sdd-qa.md  sdd-research.md  sdd-worker.md
.claude/commands/: sdd-brainstorm.md  sdd-done.md  sdd-fromjira.md  sdd-proposal.md  sdd-spec.md  sdd-start.md  sdd-task.md  sdd-tojira.md
.github/workflows/: release.yml
.jupyter/: jupyter_notebook_config.py
docs/: QSSCHEDULER.md  Revenue-EBITDA.xlsx  requirements-dev.txt  rss_keywords.sql  start_jupyter_voila.txt
examples/: bench_1.py  bench_is_parseable.py  bench_parser.py  bqdemo.py  cli.py  example_logging.py  salesforce_report.py  test_bigquery.py  test_cassandra.py  test_corporate.py  test_datasources.py  test_dwh.py  test_executor.py  test_googlega4.py  test_handler.py  test_httpsource.py  test_icims.py  test_model.py  test_mq.py  test_multi.py  test_new_qs.py  test_parser.py  test_qs.py  test_qs_lazy.py  test_query.py  test_queryconnection.py  test_rest.py  test_rethink.py  test_salesforce.py  test_sarima.py  test_sqlserver.py  test_text.py  test_upsert.py
lab/: README.md  Revenue_Forecast.ipynb  ejemplo_qs.ipynb  example_excel.ipynb  prueba_qs.ipynb  test.ipynb  test_flowtask.ipynb
my_prompts/: new-rust-migration.md
policies/: datasources.yaml  defaults.yaml  drivers.yaml  raw_queries.yaml  slugs.yaml  superusers.yaml
qs-parser/: Cargo.toml  pyproject.toml
qs-parser/src/: lib.rs  parser.rs  sql.rs
querysource/: __init__.py  _version.py  conf.py  connections.py  exceptions.py  services.py  version.py
querysource/auth/: __init__.py  _resource_types.py  credentials.py  pbac.py
querysource/cache/: base.py
querysource/cli/: __init__.py  generate_docs.py
querysource/handlers/: _pagination.py  abstract.py  components.py  executor.py  manager.py  multi.py  service.py
querysource/interfaces/: connections.py  queries.py
querysource/outputs/: output.py
querysource/parsers/: __init__.py  abstract.pxd  abstract.pyx  arangodb.pxd  arangodb.pyx  bigquery.pyx  cql.pxd  cql.pyx  deltatbl.pxd  deltatbl.pyx  elastic.pxd  elastic.pyx  iceberg.pxd  iceberg.pyx  influx.pxd  influx.py  influx.pyx  mongo.pxd  mongo.pyx  parser.pxd  parser.pyx  pgsql.pxd  pgsql.py  pgsql.pyx  rethink.pxd  rethink.py  rethink.pyx  sosql.pxd  sosql.pyx  sql.pxd  sql.py  sql.pyx  sqlserver.pxd  sqlserver.py  sqlserver.pyx
querysource/providers/: abstract.py  arangodb.py  bigquery.py  db.py  deltatbl.py  documentdb.py  elastic.py  iceberg.py  rethink.py  sql.py
querysource/qs_parsers/: __init__.py
querysource/queries/: abstract.py  base.py  executor.py  obj.py  qs.py
querysource/scheduler/: __init__.py  jobs.py  notifications.py  scheduler.py
querysource/types/: mapping.pxd  mapping.pyx  validators.pyx
querysource/utils/: cache_serialization.py  parseqs.pyx
rust/: Cargo.toml  pyproject.toml
rust/src/: arangodb_parser.rs  bigquery_parser.rs  cql_parser.rs  elastic_parser.rs  filter_common.rs  flux_parser.rs  lib.rs  mongo_parser.rs  mssql_parser.rs  parseqs.rs  pgsql_parser.rs  rethink_parser.rs  safe_dict.rs  soql_parser.rs  sql_parser.rs  validators.rs
sdd/: WORKFLOW-parrot.md
sdd/proposals/: NAV-8330-zammad-differential-tickets.brainstorm.md  SDD_NAV-6365.md  agent-skill-system.brainstorm.md  agentsflow-persistency.brainstorm.md  agentsflow-persistency.md  changes-analytics.md  compliancereport.md  composite-datasets.brainstorm.md  crew-websearchagent-support.md  dataset-support-agenttalk.md  datasetmanager-datasources.md  datasource-fix.md  episodicstore.brainstorm.md  filesystem-transport.md  finance-research.brainstorm.md  first-time-caching-embedding-model.brainstorm.md  flowtask-interface.brainstorm.md  form-abstraction-layer.brainstorm.md  form-designer-edition.brainstorm.md  formbuilder-database.brainstorm.md  formdesigner-navigator-api-integration.brainstorm.md  google-lyria-music-generation.brainstorm.md  granular-permission.md  integrations-hooks.brainstorm.md  intent-router.brainstorm.md  lightweight-invoke-client-method.brainstorm.md  long-term-memory.brainstorm.md  massive-deliberation.md  massivetoolkit.md  monorepo-migration.brainstorm.md  pbac-support.brainstorm.md  (+30 more)
templates/: .compiled  fontlist-v330.json  fontlist-v390.json
tests/: check_concurrent_get_slug.py  conftest.py  test_abstract_multi.py  test_abstract_refactor.py  test_all.py  test_api.py  test_api_data.py  test_arangodb_parser.py  test_cli_generate_docs.py  test_column_filters.py  test_component_handler.py  test_component_registry.py  test_destination_base.py  test_destination_dwh.py  test_destination_integration.py  test_destination_s3.py  test_destination_sharepoint.py  test_destination_table.py  test_elastic_parser.py  test_eval.py  test_join_conditions.py  test_join_with_column_filter.py  test_multiqs_sources_integration.py  test_query.py  test_queryslug_concurrency.py  test_route_registration.py  test_rss.py  test_rust_parsers.py  test_scheduler_core.py  test_scheduler_integration.py  test_scheduler_jobs.py  test_scheduler_multi_routing.py  test_scheduler_notifications.py  test_source_registry.py  test_source_s3.py  test_source_sharepoint.py  test_source_smartsheet.py  test_source_table.py  test_sql_parser_combinations.py  test_thread_file_refactor.py  (+3 more)
(+1008 files in other folders)
