[package]
name = "qs_parsers"
version = "0.1.0"
edition = "2021"
description = "Rust-based string processing for QuerySource parsers"

[lib]
name = "_qs_parsers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
rayon = "1.10"
regex = "1.11"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
